[project]
name = "turbo-lambda"
version = "0.9.1"
description = "Turbo Lambda Description"
readme = "README.md"
authors = [{ name = "Sam Mosleh", email = "sam.mosleh.d@gmail.com" }]
requires-python = ">=3.14"
dependencies = [
    "opentelemetry-api>=1.27.0",
    "pydantic-settings>=2.11.0",
    "psycopg[binary]>=3.3.4",
]

[dependency-groups]
dev = [
    "coverage>=7.11.0",
    "ipykernel>=7.0.1",
    "mypy>=1.18.2",
    "pytest>=8.4.2",
]

[project.scripts]
update-turbo-lambda-layer = "turbo_lambda.scripts.update_turbo_lambda_layer:main"

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[tool.mypy]
plugins = ['pydantic.mypy']

[tool.pytest.ini_options]
xfail_strict = true
testpaths = "tests"
# asyncio_mode = "auto"
addopts = ["--strict-config", "--strict-markers"]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]
filterwarnings = ["error"]

[tool.coverage.run]
branch = true
parallel = true
source = ["src", "tests"]

[tool.coverage.report]
show_missing = true
partial_branches = [
    "# pragma: no cover\\b",
    "# pragma: (nt|posix|cygwin|darwin|linux|msys|win32|cpython|pypy) (no )?cover\\b",
    "# pragma: (>=?|<=?|==|!=)\\d+\\.\\d+ cover\\b",
]
exclude_also = [
    'case _:\n\s*assert_never\(.*\)',
    'if __name__ == .__main__.:',
    'raise$',
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "PL",  # pylint
    "I",   # isort
    "C4",  # flake8-comprehensions
    "B",   # flake8-bugbear
    "Q",   # flake8-quotes
    "T20", # flake8-print
    "S",   # flake8-bandit
    "PIE", # flake8-pie
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "TC",  # flake8-type-checking
    "C90", # mccabe
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "RUF", # ruff
]
ignore = [
    "E501", # line too long, handled by formatter
]

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = ["pydantic.BaseModel"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S311"]

[tool.semantic_release]
commit_parser = "emoji"
commit_message = "🔖 {version}\n\nAutomatically generated by python-semantic-release"
version_toml = ["pyproject.toml:project.version"]
allow_zero_version = true
build_command = """
    uv lock --upgrade-package "$PACKAGE_NAME"
    git add uv.lock
    uv build
"""

[tool.semantic_release.commit_parser_options]
major_tags = ["💥"]
minor_tags = ["✨"]
patch_tags = ["🚑️", "🔒️", "🐛", "⚡️"]
